# gx

./: README.md  pyproject.toml
src/: driver.py
src/snek/genx/: __init__.py
src/snek/genx/dict/: adjs.py  const.py  legendary.py  names.py  nouns.py  verbs.py
src/snek/genx/gx/: gen.py
